# Poke-Controller-Modified

./: .gitignore  ExecutePokeConModified-Extension.bat  LICENSE  README.md  Window.py  pyproject.toml  requirements.txt  チップ削減案.md
SerialController/: Camera.py  Constant.py  DiscordNotify.py  GuiAssets.py  LineNotify.py  Menubar.py  PokeConLogger.py  VideoRecorder.py  Window.py  annotation_tool.py  chip_segmentation_test.py  cluster_characters.py  debug_contours.py  video_capture_wrapper.py
SerialController/Commands/: PythonCommandBase.py
SerialController/Commands/PythonCommands/: BattleSchoolWars.py  DiscordNotifySample.py  LoggingSample.py  color_detect_sample.py
SerialController/Commands/PythonCommands/ImageProcessingOnly/Samples/: screenshot.py
SerialController/Commands/PythonCommands/macro/: ExeExceptions.py  LoadLib.py  a_sample.py  base_exe_trade.py  compareCapture.py  library_summrise_exe.py  library_summrise_exe4.py  library_summrise_exe5.py  make_data.py  recv_exe_trade.py  recv_exe_trade.txt  recv_pg_exe_trade.py  reduce_chip_exe_3_9.py  reduce_chip_exe_3_99.py  reduce_chip_exe_9.py  reduce_chip_exe_99.py  ress_chip_exe.py  send_exe_trade copy.py  send_exe_trade.py  send_exe_trade.txt  send_exe_trade_asc.py  send_pg_exe_trade.py
SerialController/Commands/PythonCommands/macro/lib_ocr/: models.py  predictor.py
SerialController/db/: exe4_chip_list.csv  exe5_1.html  exe5_2.html  exe5_3.html  exe5_chip_list.csv  recv_library.bm.csv  recv_library.csv
SerialController/profiles/default/: settings.ini
plan/: record_plan.md
(+1 files in other folders)
