[project]
name = "Poke-controller-modified"
version = "3.1.0"
description = "Automation NS by using python and Arduino"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "deprecated>=1.2.18",
    "icecream>=2.1.4",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pygubu>=0.36.3",
    "pynput>=1.7.7",
    "pyserial>=3.5",
    "pythonnet>=3.0.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "pygubu-designer>=0.40.2",
    "ruff>=0.9.7",
    "types-deprecated>=1.2.15.20250304",
    "types-pyyaml>=6.0.12.20250326",
    "types-requests>=2.32.0.20250328",
]

[tool.mypy]
warn_unreachable = true
pretty = true
